force-app/main/default/objects/ssot__ClaimSupportingInformation__dlm/fields/ssot__InformationCategoryCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InformationCategoryCodeId__c</fullName>
    <label>Information Category Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InformationCategoryCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>