force-app/main/default/objects/ssot__ClaimSupportingInformation__dlm/fields/ssot__InformationCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__InformationCodeId__c</fullName>
    <label>InformationCode</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InformationCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>