force-app/main/default/objects/ssot__ClaimSupportingInformation__dlm/fields/ssot__ReasonType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReasonType__c</fullName>
    <label>Reason Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReasonType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>