force-app/main/default/objects/ssot__ClaimSupportingInformation__dlm/fields/ssot__rel_1723128258554_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128258554_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimSupportingInformation_ClaimId_m_rel</label>
    <referenceTo>ssot__Claim__dlm</referenceTo>
    <relationshipLabel>ClaimSupportingInformation_ClaimId_m_rel</relationshipLabel>
    <relationshipName>rel_1723128258554_end</relationshipName>
    <type>Lookup</type>
</CustomField>