force-app/main/default/objects/ssot__ClaimSupportingInformation__dlm/fields/ssot__rel_1723128322273_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128322273_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimSupportingInformation_Informati_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>ClaimSupportingInformation_Informati_rel</relationshipLabel>
    <relationshipName>rel_1723128322273_end</relationshipName>
    <type>Lookup</type>
</CustomField>